--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Marvel-Backend",
+    "name": "marvel-backend",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
